Fix DNS configuration by updating no-ipv6 setting

--- a/qx/quantumult_20260217120538.conf
+++ b/qx/quantumult_20260217120538.conf
@@ -5,8 +5,7 @@ resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/maste
 
 [dns]
 
-no-ipv6
-l
+no-ipv
 server = 8.8.8.8 
 server = 8.8.4.4 
 
