Change 'no-ipv' to 'no-ipv6' in config

--- a/qx/quantumult_20260217120538.conf
+++ b/qx/quantumult_20260217120538.conf
@@ -5,7 +5,7 @@ resource_parser_url=https://raw.githubusercontent.com/KOP-XIAO/QuantumultX/maste
 
 [dns]
 
-no-ipv
+no-ipv6
 server = 8.8.8.8 
 server = 8.8.4.4 
 
